Fix collapser heigh

--- a/client/main.scss
+++ b/client/main.scss
@@ -232,7 +232,7 @@ md-toolbar.todolist {
     background: #24292e;
     color: $text-default;
     .content {
-      padding: 1em;
+      margin: 2em;
     }
   }
 }
